[package]
name = "people_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-extra = "0.9.6"
async-trait = "0.1"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "json"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.5.2"
http = "1.0"
